...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_nama"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nama"
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_repassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_repassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_city"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                >
                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
