...
        android:title="@string/sell" />
    <item
        android:id="@+id/saleFragment"
        android:icon="@drawable/ic_sale"
        android:title="@string/sale" />
    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/ic_account"
        android:title="@string/account" />

</menu>
